# TUFF-OS

./: .gitignore  Cargo.toml  README.md
TUFF-FS/: Cargo.toml  LICENSE
TUFF-FS/docs/: secure_boot.md
TUFF-FS/shared/crypto/: Cargo.toml
TUFF-FS/shared/crypto/src/: key_manager.rs
TUFF-FS/shared/schemas/: build.rs
TUFF-FS/shared/schemas/src/: lib.rs
TUFF-FS/shared/verify/src/: eu_validator.rs  lib.rs  manifest.rs
TUFF-FS/tf_core/buildroot_config/: tuff_defconfig
TUFF-FS/tools/: build_os.sh  build_uefi.sh  deploy_usb.sh  gen_sb_keys.sh
TUFF-FS/user_space/tuff_common/: Cargo.toml
TUFF-FS/user_space/tuff_common/src/: paths.rs
TUFF-FS/user_space/tuffctl/: Cargo.toml
TUFF-FS/user_space/tuffctl/src/: main.rs  usb_storage.rs
TUFF-FS/user_space/tuffd/: Cargo.toml
TUFF-FS/user_space/tuffd/src/: fs_manager.rs  mk_fingerprint.rs  state_machine.rs  usb_monitor.rs
bootloader/tuffctl_efi/: Cargo.toml
bootloader/tuffctl_efi/src/: main.rs
docs/: push_guide.md  secure_boot.md  tuff-os-progress-summary.md  worklog_2025-01-17.md
shared/crypto/: Cargo.toml
shared/crypto/src/: aes_engine.rs  key_manager.rs  lib.rs
shared/schemas/: Cargo.toml  build.rs
shared/schemas/src/: lib.rs  tuff.fbs
shared/verify/: Cargo.toml
shared/verify/src/: eu_validator.rs  lib.rs  manifest.rs
tf_core/: README.md
tf_core/buildroot_config/: linux_fragment.config  tuff_defconfig
tf_core/overlay/: init
tools/: build_os.sh  build_uefi.sh  gen_fbs.sh  sign_efi.sh
user_space/tuff_common/: Cargo.toml
user_space/tuff_common/src/: error.rs  lib.rs  paths.rs  schemas.rs
user_space/tuffctl/: Cargo.toml
user_space/tuffctl/src/: main.rs  usb_storage.rs
user_space/tuffd/: Cargo.toml
user_space/tuffd/src/: events.rs  fs_manager.rs  main.rs  state_machine.rs  usb_monitor.rs
