[package]
name = "tuffctl_efi"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = "0.24"
uefi-services = "0.21"
log = "0.4"

# Disable default features to exclude AES
tuff_crypto = { path = "../../shared/crypto", default-features = false }
tuff_verify = { path = "../../shared/verify", default-features = false }
