[package]
name = "tuff_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
zeroize = { version = "1.6", default-features = false }
# Remove anyhow for no_std compatibility
