[package]
name = "tuffd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
udev = "0.7" # For USB detection
nix = { version = "0.27", features = ["mount", "fs"] }
tuff_common = { path = "../tuff_common" }
tuff_crypto = { path = "../../shared/crypto" }
